Change font size, text wrap correctly, button size

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,12 +1,11 @@
 body {
   background: #eee;
   font-family: sans-serif;
-  font-size: medium;
 }
 
 .card {
   padding: 10px;
-  width: 500px;
+  width: 400px;
   background: #fff;
   margin: 16px auto;
 }
@@ -15,12 +14,12 @@ body {
   background: #e3f4ff;
   margin-top: 0px;
   padding: 10px;
+  margin-bottom: 10px;
 }
 
 .content {
   background: #e3f4ff;
-  margin-top: -10px;
-  padding: 15px;
+  padding: 20px 10px 20px 10px;
 }
 
 .button-container {
@@ -35,4 +34,5 @@ button {
   border: 1px solid #eee;
   display: block;
   margin: auto;
+  padding: 10px 20px 10px 20px;
 }
